tools/find_unsafe2/tests/snapshots/adversarial__exported_static_demoted.snap
---
source: find_unsafe2/tests/adversarial.rs
expression: out.stdout
---
adv_exported_static_demoted::ADV_STATE: exported symbol ADV_STATE removed
adv_exported_static_demoted::ADV_STATE: exported symbol changed: "ADV_STATE" -> none
