tools/find_unsafe2/tests/snapshots/adversarial__exported_static_removed.snap
---
source: find_unsafe2/tests/adversarial.rs
expression: out.stdout
---
adv_exported_static_removed::ADV_TABLE: exported symbol ADV_TABLE removed
