tools/find_unsafe2/tests/snapshots/adversarial__facade_relocation.snap
---
source: find_unsafe2/tests/adversarial.rs
assertion_line: 67
expression: out.stdout
---
warning: adv_facade_relocation::bind_state: raw pointer derefs increased: 0 -> 1
adv_facade_relocation::bind_state: safe fn carries 1 raw pointer types in signature; new or newly-safe fns must have pointer-free signatures
