tools/find_unsafe2/tests/snapshots/adversarial__fake_automatically_derived.snap
---
source: find_unsafe2/tests/adversarial.rs
assertion_line: 67
expression: out.stdout
---
warning: adv_fake_automatically_derived: unsafe impl count increased: 0 -> 1
total unsafe operations increased: 0 -> 1
