tools/find_unsafe2/tests/snapshots/adversarial__hub_conversion.snap
---
source: find_unsafe2/tests/adversarial.rs
expression: out.stdout
---
warning: adv_hub_conversion::hub: raw pointer derefs increased: 1 -> 2
