tools/find_unsafe2/tests/snapshots/adversarial__inline_asm.snap
---
source: find_unsafe2/tests/adversarial.rs
expression: out.stdout
---
warning: adv_inline_asm::spin: inline asm blocks increased: 0 -> 1
total unsafe operations increased: 0 -> 1
