tools/find_unsafe2/tests/snapshots/adversarial__new_crate.snap
---
source: find_unsafe2/tests/adversarial.rs
expression: out.stdout
---
warning: adv_new_crate::evil: raw pointer derefs increased: 0 -> 1
adv_new_crate::evil: safe fn carries 1 raw pointer types in signature; new or newly-safe fns must have pointer-free signatures
total unsafe operations increased: 0 -> 1
