tools/find_unsafe2/tests/snapshots/adversarial__new_crate_type_only.snap
---
source: find_unsafe2/tests/adversarial.rs
expression: out.stdout
---
adv_new_crate_type_only::Handle: field p raw pointer count increased: 0 -> 1
