tools/find_unsafe2/tests/snapshots/adversarial__project_derive.snap
---
source: find_unsafe2/tests/adversarial.rs
expression: out.stdout
---
warning: adv_project_derive: unsafe impl count increased: 0 -> 1
total unsafe operations increased: 0 -> 1
